gitops/platform/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
spec:
  selector:
    app: backstage
  ports:
    - port: 7007
      targetPort: http
